<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".income.MainActivity">

    <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/enter_pay_amount"
            android:textSize="28sp"
            android:textColor="#0A516D"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.118" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/enter_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.862" android:layout_marginBottom="76dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginLeft="96dp"
            android:ems="10"
            android:hint="$"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="96dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="96dp" android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"/>



    <Switch
            android:text="@string/weekly"
            android:textSize="18sp"
            android:textColor="#0A516D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/switch1" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintHorizontal_bias="0.498"/>
    <Switch
            android:text="@string/fortnightly"
            android:textSize="18sp"
            android:textColor="#0A516D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/switch2" app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/switch1"/>
    <Switch
            android:text="@string/monthly"
            android:textSize="18sp"
            android:textColor="#0A516D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch3" android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/switch2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintVertical_bias="0.006"
            app:layout_constraintHorizontal_bias="0.498"/>


</androidx.constraintlayout.widget.ConstraintLayout>